--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
+# Default ignored files
+/shelf/
+/workspace.xml
+
+#Terraform
+**/.terraform/*
 *.tfstate
-*.tfstate.backup
-.terraform
-*.iml
+*.tfstate.*
+*.terraform.lock.hcl
+
+#IntelliJ
+.idea/*
